CSS fix loading img alignment with File input

--- a/assets/themes/FlatSIS/stylesheet_wkhtmltopdf.css
+++ b/assets/themes/FlatSIS/stylesheet_wkhtmltopdf.css
@@ -85,6 +85,10 @@
 	background-image: url(spinning.gif);
 }
 
+input + .loading {
+	vertical-align: bottom;
+}
+
 /* Replace Open Sans font with Lato (Light) */
 
 @font-face {
